--- a/examples/example-attack-defense-verbose.yaml
+++ b/examples/example-attack-defense-verbose.yaml
@@ -1,11 +1,5 @@
-
-options:
-  cloud-platform: heat
-  heat:
-    authenticator: /path/to/openstack-rc-file
-
 scenario:                                    
-  type: attack-defense                          # Required - Possible values: {generic, jeopardy, attack-defense, Wargame, redteam-vs-blueteam} add red-team only?
+  type: attack-defense
   properties:
     name: Fancy-name-of-CTF
     number_of_teams: 3
@@ -13,7 +7,7 @@ scenario:
     endDate: 07.01.1970
     startTime: 12:00
     endtime: 23:59
-    agents:                                     # Agents are added as a property of a scenario
+    agents:
       - ddos-start
       - reporting
     phases: 
@@ -43,38 +37,45 @@ resources:
     DeliveryMethod: email
     file: foo
   
-  node:                                         # Required - Object name is used to refer to this object from elsewhere
-    type: node                                  # Required - [node, router, vulnerability, ]
+  node:                                        
+    type: node                                  
     properties:
-      flavor: m1.small                          # Optional - m1.medium and m1.small is default for Windows and Linux respectively
-      os: Ubuntu Server 18.04 LTS (Bionic Beaver) amd64         # Required - The OS. Maps to images in OpenStack       
-      public_ip: yes                            # Optional - Whether or not the node should have a Floating IP
-      networks:                                 # Required - Can be empty if Node is not connected to any networks.
-      - router: management                      # Required - The router to connect to
-        subnet: attack_defense_subnet           # Required - Comma separated list e.g subnet: a,b,c
-        port_security:                          # Optional  
-          tcp:                                  # Optional 
+      flavor: m1.small                        
+      os: Ubuntu Server 18.04 LTS (Bionic Beaver) amd64           
+      public_ip: yes
+      networks:
+      - router: management
+        subnet: attack_defense_subnet
+        port_security:
+          tcp:
           - 22
           - 80
           - 8080
           udp:
           - 53
-      role:                                     # Optional
-        name: web                               
-      userAccount:                              # Optional - Define User accounts on the system 
+      role:
+        name: web     
+      services:
+        - apache2                          
+      userAccount:
         type: employee                           
         name: John Doe
-        groups:                                 # Optional - Which groups the user should be a member of
+        groups:
           - www-data
           - employees
-      vulnerability:                            # Optional - Which vulnerabilities should the Node have.
-        - shellshock                            # Required - Name is used to fetch vulnerabiltiy from DB. If not also declared as a resource, the DB default is used.
+      vulnerability:
+        - shellshock
         - heartbleed
       
-  shellshock:                                   # Object of type vulnerability. This definition will override the default
+  shellshock:
     type: vulnerability                   
-    properties:                                 # The idea here is to have vulnerability specific properties that can override what is default in the DB.
-      bash_version: x.y.z                       # Optional 
+    properties:
+      bash_version: x.y.z
+
+  apache2:
+    type: service
+    properties:
+      port: 8000
 
   SomeTeamName:
     type: team
