--- a/lib/scenario-templates/management-attack-defense-template.yaml
+++ b/lib/scenario-templates/management-attack-defense-template.yaml
@@ -28,6 +28,7 @@ resources:
     properties:
       name: {get_param: manager_server_name}
       image: {get_param: manager_image}
+      config_drive: true
       personality:
         privkey: { get_file: ../../ansible_deploy_key }
       metadata: { 'group': 'manager' }
@@ -38,7 +39,7 @@ resources:
       user_data_format: RAW
       user_data:
         str_replace:
-          template: { get_file: ../scripts/manager.sh }
+          template: { get_file: ../scripts/manager2.sh }
           params:
             __teststring__: "This script should eventually do something useful..."
 
