--- a/examples/example-jeopardy-minimal.yaml
+++ b/examples/example-jeopardy-minimal.yaml
@@ -1,4 +1,3 @@
-
 scenario:                                  
   type: jeopardy    
   properties:
@@ -7,7 +6,7 @@ scenario:
     endDate: 07.01.1970
     startTime: 12:00
     endtime: 23:59
-    phases:
+    docker_hosts: 3
 
 resources:
   shellshock:                               
