--- a/examples/example-jeopardy-minimal.yaml
+++ b/examples/example-jeopardy-minimal.yaml
@@ -12,5 +12,5 @@ resources:
   shellshock:                               
     type: challenge                   
     
-  challenge1:                               
+  heartbleed:                               
     type: challenge                   
