Attempt at implementing user_accounts + smaller fixes. User_account probably need more work and is not expected to work properly at this point

--- a/ctfgen.conf
+++ b/ctfgen.conf
@@ -3,6 +3,10 @@ platform = heat
 spawn_wait_time = 90
 openstack_key = testkey
 
+[ANSIBLE]
+ntp_role = geerlingguy.ntp
+user_role = unxnn.users
+
 [ATTACK-DEFENSE]
 management_nodes = manager
 
