--- a/examples/example-redteam-blueteam-minimal.yaml
+++ b/examples/example-redteam-blueteam-minimal.yaml
@@ -8,24 +8,55 @@ scenario:
     endDate: 07.01.1970
     startTime: 12:00
     endtime: 23:59
-    phases:
 
 resources:
-  gameserver:          
+  gameserver1:          
     type: node                         
     properties:
       networks:      
       - router: gateway
-        subnet: ctf-lan
+        subnet: ctf-dmz
+        port_security:
+          tcp:
+          - 80
+          - 443
+          - 8000
+
+  gameserver2:          
+    type: node                         
+    properties:
+      networks:      
       - router: gateway
         subnet: ctf-dmz
+        port_security:
+          tcp:
+          - 80
+          - 443
+          - 8000
 
-  node:
+  node1:
     type: node
     properties:
       networks:
         - router: gateway
           subnet: ctf-lan
+          port_security:
+            tcp:
+            - 80
+            - 443
+            - 8000
+
+  node2:
+    type: node
+    properties:
+      networks:
+        - router: gateway
+          subnet: ctf-lan
+          port_security:
+            tcp:
+            - 80
+            - 443
+            - 8000
 
   gateway:
     type: router                    
@@ -38,7 +69,7 @@ resources:
           cidr: 192.168.41.0/24
           gatewayIP: 192.168.41.1
 
-  Blueteam:
+  team1:
     type: team
     properties:
       members:
@@ -46,7 +77,7 @@ resources:
       - blue_member2
       email: foo@bar.com
       
-  Redteam:
+  team2:
     type: team
     properties:
       members:
