Fix bug where the correct openstack key was not used in management template

--- a/lib/templates/redteam-blueteam-template.yaml
+++ b/lib/templates/redteam-blueteam-template.yaml
@@ -8,5 +8,6 @@ parameters:
 resources:
   management:
     type: ../lib/templates/management-redteam-blueteam-template.yaml
-
+    properties:
+      key_name: { get_param: key_name }
   
