--- a/lib/templates/attack-defense-template.yaml
+++ b/lib/templates/attack-defense-template.yaml
@@ -8,3 +8,5 @@ parameters:
 resources:
   management:
     type: ../lib/templates/management-attack-defense-template.yaml
+    properties:
+      key_name: { get_param: key_name }
