--- a/lib/templates/jeopardy-template.yaml
+++ b/lib/templates/jeopardy-template.yaml
@@ -27,7 +27,8 @@ parameters:
 resources:
   management:
     type: ../lib/templates/management-jeopardy-template.yaml
-
+    properties:
+      key_name: { get_param: key_name }
   docker_servers:
     type: OS::Heat::ResourceGroup
     properties:
