--- a/lib/templates/management-attack-defense-template.yaml
+++ b/lib/templates/management-attack-defense-template.yaml
@@ -6,7 +6,7 @@ parameters:
   manager_server_name: {type: string, default: manager}
   manager_image: {type: string, default: Ubuntu Server 18.04 LTS (Bionic Beaver) amd64 } #CentOS 7.5 x86_64 }
   manager_flavor: {type: string, default: m1.medium}
-  key_name: {type: string, default: testkey }
+  key_name: {type: string }
 
   management-lan_net_cidr: {type: string, default: 192.168.200.0/24}
   management-lan_net_gateway: {type: string, default: 192.168.200.1}
