--- a/lib/templates/management-redteam-blueteam-template.yaml
+++ b/lib/templates/management-redteam-blueteam-template.yaml
@@ -7,7 +7,7 @@ parameters:
   manager_server_name: {type: string, default: manager}
   manager_image: {type: string, default: Ubuntu Server 18.04 LTS (Bionic Beaver) amd64 }
   manager_flavor: {type: string, default: m1.medium}
-  key_name: {type: string, default: testkey }
+  key_name: {type: string }
 
   management-lan_net_cidr: {type: string, default: 10.10.0.0/24}
   management-lan_net_gateway: {type: string, default: 10.10.0.1}
