Add skeleton for VPN and gameserver nodes in AD

--- a/ctfgen.conf
+++ b/ctfgen.conf
@@ -8,7 +8,7 @@ ntp_role = geerlingguy.ntp
 user_role = unxnn.users
 
 [ATTACK-DEFENSE]
-management_nodes = manager
+management_nodes = manager gameserver vpn
 
 [JEOPARDY]
 management_nodes = manager
