--- a/examples/example-attack-defense-minimal.yaml
+++ b/examples/example-attack-defense-minimal.yaml
@@ -25,7 +25,7 @@ scenario:
 
 
 resources:
-  gameserver:          
+  service_node:          
     type: node                              
     properties:
       networks:
@@ -41,11 +41,8 @@ resources:
       services:
       - apache2
       - docker
-      vulnerabilities:
-      - some_vulnerability
-      - another_vulnerability
 
-  kali:          
+  attack_node:          
     type: node                              
     properties:
       networks:
